[tool.poetry]
name = "spotifyhistory"
version = "0.1.0"
description = "Tracks Your Daily History Ofn Spotify"
authors = ["Hunter Sonn"]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.18.0"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
